--- a/src/app/notes-board-body/notes-board-body.component.html
+++ b/src/app/notes-board-body/notes-board-body.component.html
@@ -1,20 +1,20 @@
 <div class="content">
     <mat-card class="columns">
         <div class="day-headers">
-            <div class="day-header item label-header"></div>
-            <div class="day-header item borders">
+            <div class="day-header label-header"></div>
+            <div class="day-header borders">
                 {{ getWeekDateByDay("Monday") }}
             </div>
-            <div class="day-header item borders">
+            <div class="day-header borders">
                 {{ getWeekDateByDay("Tuesday") }}
             </div>
-            <div class="day-header item borders">
+            <div class="day-header borders">
                 {{ getWeekDateByDay("Wednesday") }}
             </div>
-            <div class="day-header item borders">
+            <div class="day-header borders">
                 {{ getWeekDateByDay("Thursday") }}
             </div>
-            <div class="day-header item borders">
+            <div class="day-header borders">
                 {{ getWeekDateByDay("Friday") }}
             </div>
         </div>
