--- a/src/app/components/notes-board-body/notes-board-body.component.scss
+++ b/src/app/components/notes-board-body/notes-board-body.component.scss
@@ -1,7 +1,7 @@
 :host {
     .content {
         display: flex;
-        background-color: #ffffff;
+        background: #fafafa;
         height: 100%;
     }
 
