--- a/src/app/components/notes-card/notes-card.component.scss
+++ b/src/app/components/notes-card/notes-card.component.scss
@@ -20,9 +20,15 @@
 
 .note {
     height: 100%;
+    display: flex;
+    flex-direction: column;
 
     &:hover {
         cursor: pointer;
+    }
+
+    .summary {
+        margin-top: 10px;
     }
 
     @media (max-width: 1680px) {
@@ -32,6 +38,7 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+            margin: auto;
         }
 
         &:hover {
@@ -52,7 +59,7 @@
         display: none;
 
         @media (min-width: 1680px) {
-            margin-top: 10px;
+            margin-top: auto;
             display: block;
         }
     }
